--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0",
     "zustand": "^5.0.3"
+    "@vercel/analytics": "latest",
   },
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
