--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "ws": "^8.18.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0",
-    "zustand": "^5.0.3"
-    "@vercel/analytics": "latest",
+    "zustand": "^5.0.3",
+   "@vercel/analytics": "^1.1.1"
   },
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
